# locaweb-email-client

./: .gitignore  CMakeLists.txt  config.cfg  email.txt
src/: AppConfig.h  Attachement.h  MailFileReader.h  main.cpp
